test/libsolidity/syntaxTests/nameAndTypeResolution/positive_integers_to_signed_out_of_bound.sol
contract test {
    int8 public j = 128;
}
// ----
// TypeError: (36-39): Type int_const 128 is not implicitly convertible to expected type int8.
